prevents overflow of profile management container

--- a/src/app/pages/main/profile-management/profile-management.component.scss
+++ b/src/app/pages/main/profile-management/profile-management.component.scss
@@ -7,6 +7,7 @@
   padding: 10px 24px 24px;;
   gap: 20px;
   height: calc(100vh - 90px); 
+  overflow: hidden;
 
   @media (min-width: 600px) {
     height: calc(100vh - 120px); 
